--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,27 +20,21 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:27.1.1'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     apply plugin: 'maven'
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
-    compile 'com.miguelcatalan:materialsearchview:1.4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:27.1.1'
-    compile 'com.google.firebase:firebase-messaging:11.0.4'
-    compile 'com.google.firebase:firebase-auth:11.0.4'
-    compile 'com.github.Hitomis:CircleMenu:v1.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
+    implementation 'com.google.firebase:firebase-auth:11.0.4'
+    implementation 'com.github.Hitomis:CircleMenu:v1.0.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.lsjwzh:materialloadingprogressbar:0.5.8-RELEASE'
+    implementation 'com.lsjwzh:materialloadingprogressbar:0.5.8-RELEASE'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.7'
     implementation 'net.danlew:android.joda:2.9.4.1'
     implementation 'com.android.support:support-annotations:27.1.1'
