--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -103,7 +102,8 @@
         <activity android:name=".Doctor" />
         <activity android:name=".AddDoctorActivity" />
         <activity android:name=".MyDiary" />
-        <activity android:name=".AddDiaryActivity"></activity>
+        <activity android:name=".AddDiaryActivity" />
+        <activity android:name=".MyAppointments"></activity>
     </application>
 
 </manifest>
