--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,8 @@
         <activity android:name=".AddDiaryActivity" />
         <activity android:name=".MyAppointments" />
         <activity android:name=".AddMyAppointsmentsActivity" />
-        <activity android:name=".BmiActivity"></activity>
+        <activity android:name=".BmiActivity" />
+        <activity android:name=".SelectDoctorActivity"></activity>
     </application>
 
 </manifest>
