--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     apply plugin: 'maven'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
@@ -39,6 +40,8 @@ dependencies {
     implementation 'net.danlew:android.joda:2.9.4.1'
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'io.paperdb:paperdb:2.5'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
 }
 
